create endpoints in router and in swagger
