# app.js
@@ -9,6 +9,8 @@ const swaggerDocument = YAML.load('./swagger.yaml');
 
 var indexRouter = require('./routes/index');
 var usersRouter = require('./routes/users');
+var productsRouter = require('./routes/products');
+var productRouter = require('./routes/product');
 
 var app = express();
 
@@ -25,6 +27,10 @@ app.use(express.static(path.join(__dirname, 'public')));
 app.use('/', indexRouter);
 app.use('/users', usersRouter);
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+app.use('/products', productsRouter)
+app.use('/product', productRouter)
+
+
 
 // catch 404 and forward to error handler
 app.use(function(req, res, next) {
