# swagger.yaml
@@ -1,17 +1,19 @@
 openapi: 3.0.0
 info:
-  title: Sample API
+  title: Nodemon API
   description: Optional multiline or single-line description in [CommonMark](http://commonmark.org/help/) or HTML.
   version: 0.1.9
 servers:
-  - url: http://api.example.com/v1
+  - url: http://localhost:3000
     description: Optional server description, e.g. Main (production) server
-  - url: http://staging-api.example.com
+  - url: http://localhost:3000
     description: Optional server description, e.g. Internal staging server for testing
 paths:
   /users:
     get:
       summary: Returns a list of users.
+      tags:
+        - users
       description: Optional extended description in CommonMark or HTML.
       responses:
         '200':    # status code
@@ -22,3 +24,112 @@ paths:
                 type: array
                 items: 
                   type: string
+  /products/list:
+    get:
+      summary: Returns a list of products.
+      tags:
+        - products
+      description: Returns a list of products, can be filtered by name, tag or price
+      parameters:
+      - name: page   
+        in: query
+        schema:
+          type: integer
+        description: Page number given in order to paginate  
+      - name: num_productos_per_page 
+        in: query
+        schema:
+          type: integer
+        description: The number of products to return      
+      - in: query
+        name: name  
+        required: false
+        schema:
+          type: string
+        description: Filter by product name
+      - in: query
+        name: tag
+        required: false
+        schema:
+          type: string
+        description: Filter by product tag
+      - in: query
+        name: price_min  
+        required: false
+        schema:
+          type: integer
+        description: Filter by product minimun price 
+      - in: query
+        name: price_max  
+        required: false
+        schema:
+          type: integer
+        description: Filter by product maximun price
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
+        '400':    
+          description: `page`  + `num_productos_per_page` are required
+  
+  /products/tags:
+    get:
+      summary: Returns a list of products tags.
+      tags:
+        - products
+      description: Returns a list of products tags  
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
+  /product/new:
+    post:
+      summary: Create a new product.
+      tags:
+        - product
+      description: Returns a list of products tags  
+      responses:
+        '200':    # status code
+          description: A JSON array of user names
+          content:
+            application/json:
+              schema: 
+                type: array
+                items: 
+                  type: string
+  
+
+components:
+  schemas:
+    Products:
+      properties:
+        name:
+          type: string
+        status:
+          type: string
+        price:
+          type: float
+        picture:
+          type: string
+        tags:
+          type: string
+      # Both properties are required
+      required:  
+        - name
+        - status
+        - price
+        - picture
+
+
+
+          
